--- a/sled_howto/templates/sled_howto/howto.html
+++ b/sled_howto/templates/sled_howto/howto.html
@@ -72,8 +72,25 @@
 	  How to make a simple RA,DEC &nbsp;<b>query</b>&nbsp;? - coming soon
 	</label>
       </h1>
+
+      
       <div class="p">
-	Coming soon
+	
+	<h2>Processing the result</h2>
+	<p>
+	  <ul>
+	    <li>
+	      <b>Export the result</b> - asdfas dfasd
+	    </li>
+	    <li>
+	      <b>Make a collection</b> - asdfas dfasd
+	    </li>
+	    <li>
+	      <b>Save the query</b> - adsfas dfasd 
+	    </li>
+	  </ul>
+	</p>
+
       </div>
     </div>
     
