Modified the welcome email to include helpful links.

--- a/templates/emails/successful_registration.html
+++ b/templates/emails/successful_registration.html
@@ -6,7 +6,8 @@ Here is the response from the administrators:<br>
 "{{ response }}"<br>
 <br>
 You can access your user profile here: <a href="{{ protocol }}://{{ domain }}{{ user_url }}">{{ username }}</a>.<br>
-We hope this resource will facilitate your research work.<br>
 You can also consider <a href="https://join.slack.com/t/sled/shared_invite/zt-2u9apdo8z-UaBySTl2dM0MCMjN3brDRg">joining the SLED Slack workspace</a>.<br>
 <br>
+Please have a look at the <a href="{{ protocol }}://{{ domain }}{{ coc_url }}">Code of Conduct</a> and <a href="{{ protocol }}://{{ domain }}{{ help_url }}">other resources</a> before proceeding.<br>
+We hope this resource will facilitate your research work and satisfy your curiosity.<br>
 {% include "emails/signature.html" %}
