Slight text modifications in acknowledgements and CoC.

--- a/sled_guide/templates/sled_guide/coc.html
+++ b/sled_guide/templates/sled_guide/coc.html
@@ -16,6 +16,7 @@
   <hr>
 
 
+  {% comment %}
   <div class="jb-section">
     <h2 id="-1-community-standards-">SLED is part of AMNH</h2>
     <p>
@@ -24,7 +25,7 @@
       These guidelines should supersede the rest of this code of conudct in case of conflict.
     </p>
   </div>
-  
+  {% endcomment %}  
   
   <div class="jb-section">
     <h2 id="-1-community-standards-">Community Standards</h2>
