--- a/sled_guide/templates/sled_guide/help.html
+++ b/sled_guide/templates/sled_guide/help.html
@@ -28,8 +28,9 @@
 
   <h3>Acknowledgements</h3>
   <p>
-    SLED is supported by the American Museum of Natural History that kindly provides web hosting, resources, and infrastructure support.
-    In particular, thanks goes to: Sajesh, Lawrence, and Paul from the IT team.
+    SLED is supported by the American Museum of Natural History that kindly provides web hosting, resources, and infrastructure support, with particular thanks to Sajesh Singh, Lawrence Levinson, and Paul Delong from the AMNH IT team.
+    SLED utilizes services provided by the AMNH ScienceDMZ.
+    The AMNH Science DMZ and associated research computing services are supported by the National Science Foundation Campus Cyberinfrastructure (NSF CC*) Awards 1827153, 1925590, and 2232857.
   </p>  
 </div>
 {% endblock content %}
