Added script and short instructions on how to add a spectrum.

--- a/sled_guide/templates/sled_guide/howto.html
+++ b/sled_guide/templates/sled_guide/howto.html
@@ -268,7 +268,7 @@
 	    <li>
 	      Use this <a href="https://github.com/gvernard/SLED_api/blob/master/examples/howto_simple_query.ipynb" target="_blank">simple query script</a> to perform a query to the database at your RA,DEC.
 	      This will ensure that all the lenses that you are adding data to exist in the database.
-	      If some lenses are missing, then follow the instructions on <a href="#how-to-inject-lenses">how to inject new lenses</a> first.
+	      If some lenses are missing, then follow the instructions on <a class="same-page" href="#how-to-inject-lenses">how to inject new lenses</a> first.
 	    </li>
 	    <li>
 	      Use these scripts to upload each type of data:
@@ -307,6 +307,27 @@
     </div>
     
 
+
+    <div class="c c-user">
+      <input class="accordion-checkbox" type="checkbox" id="how-to-spectra">
+      <h1 class="jb-heading-2">
+	<label for="how-to-spectra">
+	  How to &nbsp;<b>add</b>&nbsp; spectra?
+	</label>
+      </h1>
+      <div class="p">
+	<br>
+	<p>
+	  The procedure to follow for adding spectra is the same as described in <a class="same-page" href="#how-to-inject-data">&quot;How to add data associated to lenses?&quot;</a>.
+	  However, you will need to prepare a figure with the plot of the spectrum.
+	  In order to facilitate this, as well as have a uniform style for all the spectrum plots in SLED, we provide a plotting script <a href="https://github.com/gvernard/SLED_api/blob/master/examples/howto_plot_spectrum.py">here</a>.
+	</p>
+	<br>
+      </div>
+    </div>
+    
+
+    
     <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="faq-7">
       <h1 class="jb-heading-2">
