Fixed showing external link in new tab.

--- a/sled_guide/templates/sled_guide/howto.html
+++ b/sled_guide/templates/sled_guide/howto.html
@@ -320,7 +320,7 @@
 	<p>
 	  The procedure to follow for adding spectra is the same as described in <a class="same-page" href="#how-to-inject-data">&quot;How to add data associated to lenses?&quot;</a>.
 	  However, you will need to prepare a figure with the plot of the spectrum.
-	  In order to facilitate this, as well as have a uniform style for all the spectrum plots in SLED, we provide a plotting script <a href="https://github.com/gvernard/SLED_api/blob/master/examples/howto_plot_spectrum.py">here</a>.
+	  In order to facilitate this, as well as have a uniform style for all the spectrum plots in SLED, we provide a plotting script <a href="https://github.com/gvernard/SLED_api/blob/master/examples/howto_plot_spectrum.py" target="_blank">here</a>.
 	</p>
 	<br>
       </div>
