Fixed links in howtos.

--- a/sled_guide/templates/sled_guide/howto.html
+++ b/sled_guide/templates/sled_guide/howto.html
@@ -110,9 +110,9 @@
 
 
     <div class="c c-user">
-      <input class="accordion-checkbox" type="checkbox" id="faq-2">
+      <input class="accordion-checkbox" type="checkbox" id="simple-query">
       <h1 class="jb-heading-2">
-	<label for="faq-2">
+	<label for="simple-query">
 	  <b>Querying</b>&nbsp; the API for the RA,DEC only?
 	</label>
       </h1>
@@ -129,9 +129,9 @@
     
     
     <div class="c c-user">
-      <input class="accordion-checkbox" type="checkbox" id="faq-3">
+      <input class="accordion-checkbox" type="checkbox" id="advanced-query">
       <h1 class="jb-heading-2">
-	<label for="faq-3">
+	<label for="advanced-query">
 	  How to make an API &nbsp;<b>query</b>&nbsp; using all the advanced features?
 	</label>
       </h1>
