--- a/sled_guide/templates/sled_guide/howto.html
+++ b/sled_guide/templates/sled_guide/howto.html
@@ -161,7 +161,21 @@
       <div class="p">
 	Coming soon
       </div>
-    </div>  
+    </div>
+
+
+    <div class="c c-user">
+      <input class="accordion-checkbox" type="checkbox" id="how-to-score">
+      <h1 class="jb-heading-2">
+	<label for="how-to-score">
+	  How should the score be interpreted?
+	</label>
+      </h1>
+      <div class="p">
+	Please have a look at <a href="https://docs.google.com/presentation/d/1fbrwdUuztRC_IeuYsTGUONbNWMZNhl4Kpjv43kO8Gpk/edit?usp=sharing">this presentation</a> by Cameron Lemon (work in progress).
+      </div>
+    </div>
+    
     
     <div class="c c-user">
       <input class="accordion-checkbox" type="checkbox" id="how-to-inject-lenses">
@@ -336,6 +350,28 @@
       </div>
     </div>
     
+
+
+
+    <div class="c c-user">
+      <input class="accordion-checkbox" type="checkbox" id="how-to-missing-instrument">
+      <h1 class="jb-heading-2">
+	<label for="how-to-missing-instrument">
+	  What should I do if an instrument/band is missing?
+	</label>
+      </h1>
+      <div class="p">
+	<br>
+	<p>
+	  The SLED admin team has compiled a list of exisitng instruments and bands, but inevitably there will be cases that are left out.
+	  If you cannot find what you are looking for in the pre-defined list, please <a href="{{ 'sled-info@sled.amnh.org'|obfuscate_mailto }}" target="_blank">send a request</a> to add a new instrument/band to the admins.
+	  Alternatively, you can reach out for support in the Slack workspace.
+	</p>
+	<br>
+      </div>
+    </div>
+
+
 
     
     <div class="c c-user">
