Minor fixes to howto.

--- a/sled_guide/templates/sled_guide/howto.html
+++ b/sled_guide/templates/sled_guide/howto.html
@@ -172,7 +172,11 @@
 	</label>
       </h1>
       <div class="p">
-	Please have a look at <a href="https://docs.google.com/presentation/d/1fbrwdUuztRC_IeuYsTGUONbNWMZNhl4Kpjv43kO8Gpk/edit?usp=sharing">this presentation</a> by Cameron Lemon (work in progress).
+	<br>
+	<p>
+	  Please have a look at <a href="https://docs.google.com/presentation/d/1fbrwdUuztRC_IeuYsTGUONbNWMZNhl4Kpjv43kO8Gpk/edit?usp=sharing">this presentation</a> by Cameron Lemon (work in progress).
+	</p>
+	<br>
       </div>
     </div>
     
@@ -364,7 +368,7 @@
 	<br>
 	<p>
 	  The SLED admin team has compiled a list of exisitng instruments and bands, but inevitably there will be cases that are left out.
-	  If you cannot find what you are looking for in the pre-defined list, please <a href="{{ 'sled-info@sled.amnh.org'|obfuscate_mailto }}" target="_blank">send a request</a> to add a new instrument/band to the admins.
+	  If you cannot find what you are looking for in the pre-defined list, please {{ 'sled-info@sled.amnh.org'|obfuscate_mailto:"send a request" }} to add a new instrument/band to the admins.
 	  Alternatively, you can reach out for support in the Slack workspace.
 	</p>
 	<br>
