Minor fixes to howto.

--- a/sled_guide/templates/sled_guide/howto.html
+++ b/sled_guide/templates/sled_guide/howto.html
@@ -168,13 +168,13 @@
       <input class="accordion-checkbox" type="checkbox" id="how-to-score">
       <h1 class="jb-heading-2">
 	<label for="how-to-score">
-	  How should the score be interpreted?
+	  How should the candidate score be interpreted?
 	</label>
       </h1>
       <div class="p">
 	<br>
 	<p>
-	  Please have a look at <a href="https://docs.google.com/presentation/d/1fbrwdUuztRC_IeuYsTGUONbNWMZNhl4Kpjv43kO8Gpk/edit?usp=sharing">this presentation</a> by Cameron Lemon (work in progress).
+	  Please have a look at <a href="https://docs.google.com/presentation/d/1fbrwdUuztRC_IeuYsTGUONbNWMZNhl4Kpjv43kO8Gpk/edit?usp=sharing" target="_blank">this presentation</a> by Cameron Lemon (work in progress).
 	</p>
 	<br>
       </div>
