Set the framework for Cat to work on.

--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -341,7 +341,7 @@
 		
 	<!--if lens_models is not empty, it returns I found a lens model with a variable at the end that is defined in views.py (get context data function)  -->
 	{% endif %}
-    <button type="submit" class="jb-submit-button-1" data-form-url="{% url 'sled_lens_models:test' lens=lens.id %}" data-sled-onload="set_modal_lens_model_create">
+    <button type="submit" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_lens_models:test' lens=lens.id %}">
       <img src="{% static 'icons/plus.svg' %}">
       Add Lens Model
 	  <!-- This is the add lens model button that will eventually have the form to upload -->
