--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -276,6 +276,7 @@
   <!-- Div containing all the redshift measurements  -->
   <div id="redshift" class="jb-section jb-table-no-lines">
     <h1 class="jb-heading-2">Redshifts</h1>
+	<!--if redshift is not empty, this line sorts the redshift information -->
     {% if redshifts %}
     <table>
       <thead>
@@ -288,6 +289,7 @@
 	</tr>
       </thead>
       <tbody>
+		<!--this allows the user to put information in -->
 	{% for redshift in redshifts %}
 	<tr>
 	  <td class="padding-right">
@@ -338,9 +340,20 @@
   <div id="lensmodels" class="jb-section jb-table-no-lines">
     <h1 class="jb-heading-2">Lens models<h1>
     {% if lens_models %}
-		
+	<table>
+      <thead>
+	<tr>
+	  <th>Model Type</th>
+	  <th>Method</th>
+	  <th>Creator</th>
+	  <th>Info</th>
+	  <th>&nbsp;</th>
+	</tr>
+      </thead>
+      <tbody>
 	<!--if lens_models is not empty, it returns I found a lens model with a variable at the end that is defined in views.py (get context data function)  -->
 	{% endif %}
+	
     <button type="submit" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_lens_models:test' lens=lens.id %}">
       <img src="{% static 'icons/plus.svg' %}">
       Add Lens Model
