--- a/sled_data/templates/sled_data/imaging_create.html
+++ b/sled_data/templates/sled_data/imaging_create.html
@@ -6,6 +6,7 @@ Add Imaging data?
 {% endblock title %}
 
 {% block content %}
+<!--starts content block of template where you put the main content -->
 <div class="jb-container-modal">
   
   {% if form.non_field_errors|length > 0 %}
@@ -17,20 +18,25 @@ Add Imaging data?
     </ul>
   </div>
   {% endif %}
+  <!--checks if form has any errors that are not tied to specific fields, and if there are, disply error container with errors as a list <li> -->
 		
   <div class="jb-modal-field jb-table-no-lines">
     {{ form.owner }}
     {{ form.lens }}
     <table>
       <tbody>
+    <!--renders two fields called owner and lens-->
 	{% for field in form.visible_fields %}
+  <!--loops over visible form field-->
 	<tr>
 	  <td>
 	    <div class="invalid jb-modal-field">
 	      <ul>
+    <!--for each field, start a table row and cell where any field-specific errors will be displayed-->
 		{% for error in field.errors %}
 		<li>{{ error|safe }}</li>
 		{% endfor %}
+    <!--Loops over any validation errors for that particular field and displays each inside a list item.-->
 	      </ul>
 	    </div>
 	  </td>
@@ -38,6 +44,7 @@ Add Imaging data?
 	    <div class="sled-help-tooltip">{{ field.label|safe }}</div>
 	    <div class="sled-help-tooltip-content">{{ field.help_text|safe }}</div>
 	  </td>
+    <!--shows field label and help text inside different styled div-->
 	  <td>{{ field }}</td>
 	</tr>
 	{% endfor %}
