--- a/sled_lens_models/templates/sled_lens_models/lens_model_create.html
+++ b/sled_lens_models/templates/sled_lens_models/lens_model_create.html
@@ -8,10 +8,61 @@ Add Lens Model?
 {% block content %}
 <div class="jb-container-modal">
   
-  Create Model
+  Create Model  
+</div>
+
+<!--starts content block of template where you put the main content -->
+<div class="jb-container-modal">
+  
+  {% if form.non_field_errors|length > 0 %}
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.non_field_errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+  {% endif %}
+  <!--checks if form has any errors that are not tied to specific fields, and if there are, disply error container with errors as a list <li> -->
+		
+  <div class="jb-modal-field jb-table-no-lines">
+    {{ form.owner }}
+    {{ form.lens }}
+    <table>
+      <tbody>
+    <!--renders two fields called owner and lens-->
+	{% for field in form.visible_fields %}
+  <!--loops over visible form field-->
+	<tr>
+	  <td>
+	    <div class="invalid jb-modal-field">
+	      <ul>
+    <!--for each field, start a table row and cell where any field-specific errors will be displayed-->
+		{% for error in field.errors %}
+		<li>{{ error|safe }}</li>
+		{% endfor %}
+    <!--Loops over any validation errors for that particular field and displays each inside a list item.-->
+	      </ul>
+	    </div>
+	  </td>
+          <td>
+	    <div class="sled-help-tooltip">{{ field.label|safe }}</div>
+	    <div class="sled-help-tooltip-content">{{ field.help_text|safe }}</div>
+	  </td>
+    <!--shows field label and help text inside different styled div-->
+	  <td>{{ field }}</td>
+	</tr>
+	{% endfor %}
+      </tbody>
+    </table>
+  </div>
     
 </div>
 {% endblock content %}
+
+
+<!--see if I need to refer to a specific invalid field-->
+
 
 
 {% block action_button %}
