ready to submit first model

--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -338,7 +338,7 @@
   
   <!-- Add a new lens model button  -->
   <div id="lensmodels" class="jb-section jb-table-no-lines">
-    <h1 class="jb-heading-2">Lens models<h1>
+    <h1 class="jb-heading-2">Lens Models<h1>
     {% if lens_models %}
 	<table>
       <thead>
