the submit button works just working on displaying it on the details page

--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -343,9 +343,9 @@
 	<table>
       <thead>
 	<tr>
-	  <th>Model Type</th>
-	  <th>Method</th>
-	  <th>Creator</th>
+	  <th>Name</th>
+	  <th>Description</th>
+	  <th>Category</th>
 	  <th>Info</th>
 	  <th>&nbsp;</th>
 	</tr>
